# AI_Projects

AgenteClassifierExtrator/: .gitignore  README.md  pyproject.toml
AgenteClassifierExtrator/app/: main.py
AgenteClassifierExtrator/app/api/: endpoints.py
AgenteClassifierExtrator/app/core/: config.py  logging.py  rate_limiter.py  security.py
AgenteClassifierExtrator/app/schemas/: text_analysis.py
AgenteClassifierExtrator/app/services/: text_analysis_service.py
agente_de_cobranca/: .env  main.py  recomendacao_store.py
avaliador_de_redacao/: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
avaliador_de_redacao/frontend/: README.md  app.py  requirements.txt
avaliador_de_redacao/src/: __init__.py  agents.py  config.py  utils.py  workflows.py
avaliador_de_redacao/tests/: conftest.py  test_agents.py  test_utils.py  test_workflows.py
